--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@
     display: grid;
     place-items: center;
     font-size: 20px;
-    background-color: grey;
+    background-color: rgb(101, 99, 99);
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
@@ -125,5 +125,5 @@
   }
   
   #error {
-    background-color: red;
+    background-color: #353535;
   }
